updated template markdown

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <footer>
     Challenge by <a href="https://www.frontendmentor.io/challenges/testimonials-grid-section-Nnw6J7Un7/hub" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="">Samuel Ibanga</a>.
+    Coded by <a href="https://github.com/SamuelIbanga5/testimonials-grid-section">Samuel Ibanga</a>.
   </footer>
 </body>
 
